Capitalize section titles

--- a/paper/sections/appendix-bounds.tex
+++ b/paper/sections/appendix-bounds.tex
@@ -1,4 +1,4 @@
-\section{Excessive antecedent support}
+\section{Excessive Antecedent Support}
 \label{appendix:ub-supp}
 
 \begin{theorem}[Upper bound on antecedent support]
@@ -167,7 +167,7 @@ By Theorem~\ref{thm:ub-support},
 ${\RLB \notin \argmin_{\RL} \Obj(\RL, \x, \y)}$.
 \end{proof}
 
-\section{Proof of Theorem~\ref{thm:equivalent} (Equivalent support bound)}
+\section{Proof of Theorem~\ref{thm:equivalent} (Equivalent Support Bound)}
 \label{appendix:equiv-supp}
 
 We begin by defining four related rule lists.
@@ -422,7 +422,7 @@ and~\eqref{eq:equiv-analogous-optimal} to obtain the desired inequality in~\eqre
 \end{align}
 
 %\clearpage
-\section{Proof of Theorem~\ref{thm:similar} (Similar support bound)}
+\section{Proof of Theorem~\ref{thm:similar} (Similar Support Bound)}
 \label{appendix:similar-supp}
 
 We begin by defining four related rule lists.
@@ -498,7 +498,7 @@ By~\eqref{eq:similar-analogous}, we obtain the desired inequality in~\eqref{eq:s
   + b(\PrefixB, \x, \y) - b(\Prefix, \x, \y) - \omega - \Omega.
 \end{align*}
 
-\section{Proof of Theorem~\ref{thm:identical} (Equivalent points bound)}
+\section{Proof of Theorem~\ref{thm:identical} (Equivalent Points Bound)}
 \label{appendix:equiv-pts}
 
 We derive a lower bound on the default rule
