--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -1,11 +1,11 @@
 %\clearpage
-\section{Data processing details and antecedent mining}
+\section{Data Processing Details and Antecedent Mining}
 \label{appendix:data}
 
 In this appendix, we provide details regarding datasets used in our experiments
 (Section~\ref{sec:experiments}).
 
-\subsection{ProPublica recidivism data set}
+\subsection{ProPublica Recidivism Data Set}
 Table~\ref{tab:recidivism-data} shows the~6 attributes
 and corresponding~17 categorical values
 that we use for the ProPublica data set.
@@ -53,12 +53,12 @@ the number of juvenile crimes that were neither felonies nor misdemeanors (not s
 \label{tab:recidivism-data}
 \end{table}
 
-\subsection{NYPD stop-and-frisk data set}
+\subsection{NYPD Stop-and-frisk Data Set}
 This data set is larger than, but similar to the NYCLU stop-and-frisk data set, 
 described next.
 
 %\newpage
-\subsection{NYCLU stop-and-frisk data set}
+\subsection{NYCLU Stop-and-frisk Data Set}
 The original data set contains 45,787 records,
 each describing an incident involving a stopped person; the individual
 was frisked in 30,345 (66.3\%) of records and and searched in 7,283 (15.9\%).
@@ -118,7 +118,7 @@ inside or outside & inside, outside & 2 \\
 \end{table}
 
 %\clearpage
-\section{Example optimal rule lists, for different values of~$\Reg$}
+\section{Example Optimal Rule Lists, for Different Values of~$\Reg$}
 \label{appendix:examples}
 
 For each of our prediction problems, we provide listings of
@@ -130,7 +130,7 @@ in Figures~\ref{fig:sparsity-compas} and~\ref{fig:sparsity-weapon}~(\S\ref{sec:s
 %
 Recall that as~$\Reg$ decreases, optimal rule lists tend to grow in length. \\
 
-\subsection{ProPublica recidivism data set}
+\subsection{ProPublica Recidivism Data Set}
 We show example optimal rule lists that predict two-year recidivism.
 %
 Figure~\ref{fig:recidivism-rule-list-02-01} shows examples for
@@ -276,7 +276,7 @@ across 10 cross-validation folds.
 \end{figure}
 
 \clearpage
-\subsection{NYPD stop-and-frisk data set}
+\subsection{NYPD Stop-and-frisk Data Set}
 We show example optimal rule lists that predict whether a weapon
 will be found on a stopped individual who is frisked or searched, learned from the NYPD data set.
 
@@ -423,7 +423,7 @@ up to a permutation of the prefix rules, and started with the same first prefix 
 \end{figure}
 
 \clearpage
-\subsection{NYCLU stop-and-frisk data set}
+\subsection{NYCLU Stop-and-frisk Data Set}
 We show example optimal rule lists that predict whether a weapon
 will be found on a stopped individual who is frisked or searched, learned from the NYCLU data set.
 %
@@ -602,8 +602,8 @@ across 10 cross-validation folds.
 \end{figure}
 
 \clearpage
-\section{Additional results on predictive performance and model size for
-CORELS and other algorithms}
+\section{Additional Results on Predictive Performance and Model Size for
+CORELS and Other Algorithms}
 \label{appendix:cpw}
 
 In this appendix, we plot TPR, FPR, and model size for CORELS and three other
