--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -1,4 +1,4 @@
-\section{Learning optimal rule lists}
+\section{Learning Optimal Rule Lists}
 \label{sec:framework}
 
 \begin{arxiv}
@@ -244,7 +244,7 @@ particular prefix, we implicitly assume these empirically determined label predi
 Our method is technically an associative classification method since it
 leverages pre-mined rules.
 
-\subsection{Objective function}
+\subsection{Objective Function}
 \label{sec:objective}
 
 \begin{arxiv}
@@ -279,7 +279,7 @@ by~one.
 %fully specify a rule list~${\RL = (\Prefix, \Labels, \Default, K)}$,
 %thus let us define~${\Obj(\Prefix, \x, \y) \equiv \Obj(\RL, \x, \y)}$.
 
-\subsection{Optimization framework}
+\subsection{Optimization Framework}
 \label{sec:optimization}
 
 Our objective has structure amenable to global optimization via a branch-and-bound framework.
@@ -330,7 +330,7 @@ the number of observations with the minority label.
 We present additional theorems and all proofs in~\citep{AngelinoLaAlSeRu17}.
 \end{kdd}
 
-\subsection{Hierarchical objective lower bound}
+\subsection{Hierarchical Objective Lower Bound}
 \label{sec:hierarchical}
 
 We can decompose the misclassification error
