Standardize references, in particular conferences

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,7 +1,7 @@
 @inproceedings{AngelinoLaAlSeRu17-kdd,
 author = {E. Angelino and N. Larus-Stone and D. Alabi and M. Seltzer and C. Rudin},
 title = "Learning certifiably optimal rule lists for categorical data",
-booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'17)}},
+booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
 year = {2017},
 location = {Halifax, Nova Scotia, Canada},
 __pages = {},
@@ -37,7 +37,7 @@ note={Unpublished}
 __author={Himabindu Lakkaraju and Cynthia Rudin},
 author={H. Lakkaraju and C. Rudin},
 title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule Lists},
- booktitle = {Proceedings of the Artificial Intelligence and Statistics {(AISTATS)}},
+ booktitle = {International Conference on Artificial Intelligence and Statistics {(AISTATS)}},
  year={2017},
  }
 
@@ -73,7 +73,7 @@ title={Cost-sensitive and Interpretable Dynamic Treatment Regimes Based on Rule 
 __author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan},
 author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
     title     = {Interpretable classifiers using rules and {B}ayesian analysis: {B}uilding a better stroke prediction model},
-   journal="Annals of Applied Statistics",
+   journal="The Annals of Applied Statistics",
      year      = "2015",
      volume = "9",
      number="3",
@@ -85,8 +85,8 @@ author  = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
 __author={Hongyu Yang and Cynthia Rudin and Margo Seltzer},
     author={H. Yang and C. Rudin and M. Seltzer},
     __journal={Preprint at arXiv:1602.08610},
-    booktitle = {Proceedings of the 34th International Conference on Machine Learning},
-    series={ICML '17},
+    booktitle = {International Conference on Machine Learning (ICML)},
+    __series={ICML '17},
     year={2017}
 }
 
@@ -94,7 +94,7 @@ __author={Hongyu Yang and Cynthia Rudin and Margo Seltzer},
 __author = {Garofalakis, Minos and Hyun, Dongjoon and Rastogi, Rajeev and Shim, Kyuseok},
 author = {M. Garofalakis and D. Hyun and R. Rastogi and K. Shim},
  title = {Efficient Algorithms for Constructing Decision Trees with Constraints},
- booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD'98)}},
+ booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
  year = {2000},
  location = {Boston, Massachusetts, USA},
  pages = {335--339},
@@ -120,7 +120,7 @@ year={2016}
 __author = {Goel, Sharad and Rao, Justin M. and Shroff, Ravi},
 author = {Goel, S. and Rao, J. M. and Shroff, R.},
 fjournal = "The Annals of Applied Statistics",
-journal = "Ann. Appl. Stat.",
+journal = "The Annals of Applied Statistics",
 month = "03",
 number = "1",
 pages = "365--394",
@@ -413,7 +413,7 @@ author    = {A. Farhangfar and R. Greiner and M. Zinkevich},
   __booktitle = {International Symposium on Artificial Intelligence and Mathematics
                {(ISAIM} 2008), Fort Lauderdale, Florida, USA, January 2-4, 2008},
   booktitle = {International Symposium on Artificial Intelligence and Mathematics
-               {(ISAIM} 2008)},
+               {(ISAIM)}},
   year      = {2008}
 }
 %http://isaim2008.unl.edu/PAPERS/TechnicalProgram/ISAIM2008_0022_afd88e29a0a4ff36741f4d8e4eb84a69.pdf
@@ -434,7 +434,7 @@ author={Dobkin, D. and Fulton, T. and Gunopulos, D. and Kasif, S. and Salzberg, 
 __author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and David Madigan},
 author    = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
     title     = "An interpretable model for stroke prediction using rules and Bayesian analysis",
-    booktitle={Proceedings of 2014 KDD Workshop on Data Science for Social Good},
+    booktitle={KDD Workshop on Data Science for Social Good},
      year      = {2014}
 }
 
@@ -443,7 +443,7 @@ __author    = {Benjamin Letham and Cynthia Rudin and Tyler H. McCormick and Davi
 author    = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
   title={An Interpretable Stroke Prediction Model using Rules and Bayesian Analysis},
   year={2013},
-  booktitle={Proceedings of AAAI Late Breaking Track}
+  booktitle={AAAI Late Breaking Track}
 }
 	
 
@@ -451,7 +451,7 @@ author    = {B. Letham and C. Rudin and T. H. McCormick and D. Madigan},
 __author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
 title={Falling Rule Lists},
-booktitle={Proceedings of Artificial Intelligence and Statistics ({AISTATS})},
+booktitle={International Conference on Artificial Intelligence and Statistics ({AISTATS})},
 year={2015}
 }
 
@@ -468,7 +468,7 @@ author={F. Wang and C. Rudin},
 __author={Siong Thye Goh and Cynthia Rudin},
 author={S. T. Goh and C. Rudin},
 title={Box Drawings for Learning with Imbalanced Data}, 
-booktitle={Proceedings of the 20th ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD'14)}},
+booktitle={ACM SIGKDD Conference on Knowledge Discovery and Data Mining {(KDD)}},
 year={2014}
 } 
 
@@ -592,7 +592,7 @@ author={Dawes, R. M.},
 title={Making machine learning models interpretable},
 __author={Alfredo Vellido and Jos\'{e} D. Mart\'{i}n-Guerrero and Paulo J.G. Lisboa}, 
 author={A. Vellido and J. D. Mart\'{i}n-Guerrero and P. J.G. Lisboa}, 
-booktitle={Proceedings of the European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning},
+booktitle={European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning {(ESANN)}},
 year={2012} 
 }
 
@@ -600,7 +600,7 @@ year={2012}
 @inproceedings{YiHu05,
     author = {Yu Yi and Eyke H\"{u}llermeier},
     title = {Learning complexity-bounded rule-based classifiers by combining association analysis and genetic algorithms},
-    booktitle={Proceedings of the Joint 4th International Conference in Fuzzy Logic and Technology},
+    booktitle={International Conference in Fuzzy Logic and Technology {(EUSFLAT)}},
     series={EUSFLAT '05},
     pages={47-52},
     year = {2005}
@@ -611,8 +611,8 @@ year={2012}
 __author={Christophe Giraud-Carrier},
 author={C. Giraud-Carrier},
 title={Beyond predictive accuracy: {W}hat?},
-booktitle={Proceedings of the ECML-98 Workshop on Upgrading Learning to Meta-Level: Model Selection and Data Transformation}, 
-pages={78--85}, 
+booktitle={ECML-98 Workshop on Upgrading Learning to Meta-Level: Model Selection and Data Transformation},
+pages={78--85},
 year={1998}
 }
 
@@ -763,7 +763,7 @@ publisher={Academic Press}
 @inproceedings{Agrawal93,
  author = {Rakesh Agrawal and Tomasz Imieli\'{n}ski and Arun Swami},
  title = {Mining association rules between sets of items in large databases},
- booktitle = {Proceedings of the 1993 ACM SIGMOD International Conference on Management of Data},
+ booktitle = {ACM SIGMOD International Conference on Management of Data {(SIGMOD)}},
  series = {SIGMOD '93},
  year = {1993},
  pages = {207--216}
@@ -773,7 +773,7 @@ publisher={Academic Press}
 @inproceedings{Yang04,
  author = {Guizhen Yang},
  title = {The complexity of mining maximal frequent itemsets and maximal frequent patterns},
- booktitle = {Proceedings of the 10th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
  series = {KDD '04},
  year = {2004},
  pages = {344--353}
@@ -783,7 +783,7 @@ publisher={Academic Press}
 @inproceedings{Agrawal94,
  author = {Rakesh Agrawal and Ramakrishnan Srikant},
  title = {Fast algorithms for mining association rules},
- booktitle = {Proceedings of the 20th International Conference on Very Large Databases},
+ booktitle = {International Conference on Very Large Databases {(VLDB)}},
  series = {VLDB '94},
  year = {1994},
  pages = {487--499}
@@ -850,7 +850,7 @@ year = {2003}
 @inproceedings{Bayardo99,
  author = {Roberto J. Bayardo and Rakesh Agrawal},
  title = {Mining the most interesting rules},
- booktitle = {Proceedings of the 5th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
  series = {KDD '99},
  pages = {145--154},
  year = {1999}
@@ -860,8 +860,8 @@ year = {2003}
 __author = {Bing Liu and Wynne Hsu and Yiming Ma},
 author = {B. Liu and W. Hsu and Y. Ma},
  title = {Integrating classification and association rule mining},
- booktitle = {Proceedings of the 4th International Conference on Knowledge Discovery and Data Mining},
- series={KDD '98},
+ booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
+ __series={KDD '98},
  pages = {80--96},
  year = {1998}
 }
@@ -870,7 +870,7 @@ author = {B. Liu and W. Hsu and Y. Ma},
 __author = {Wenmin Li and Jiawei Han and Jian Pei},
 author = {W. Li and J. Han and J. Pei},
  title = {{CMAR}: {A}ccurate and efficient classification based on multiple class-association rules},
- journal = {IEEE International Conference on Data Mining},
+ journal = {IEEE International Conference on Data Mining {(ICDM)}},
  year = {2001},
  pages = {369--376}
  }
@@ -879,8 +879,8 @@ author = {W. Li and J. Han and J. Pei},
 __author = {Xiaoxin Yin and Jiawei Han},
 author = {X. Yin and J. Han},
  title = {{CPAR}: {C}lassification based on predictive association rules},
- booktitle = {Proceedings of the 2003 SIAM International Conference on Data Mining},
- series={ICDM '03},
+ booktitle = {SIAM International Conference on Data Mining {(SDM)}},
+ __series={ICDM '03},
  year = {2003},
  pages = {331--335}
 }
@@ -888,7 +888,7 @@ author = {X. Yin and J. Han},
 @inproceedings{Ali97,
     author = {Kamal Ali and Stefanos Manganaris and Ramakrishnan Srikant},
     title = {Partial classification using association rules},
-    booktitle = {Proceedings of the 3rd International Conference on Knowledge Discovery and Data Mining},
+    booktitle = {International Conference on Knowledge Discovery and Data Mining {(KDD)}},
     series={KDD '97},
     year = {1997},
     pages = {115--118}
@@ -941,14 +941,15 @@ year = 2014
 @misc{npr-bail:2017,
 title = {Did A Bail Reform Algorithm Contribute To This {S}an {F}rancisco Man's Murder?},
 note = {\url{https://www.npr.org/2017/08/18/543976003/did-a-bail-reform-algorithm-contribute-to-this-san-francisco-man-s-murder}},
-author = {Eric Westervelt},
+__author = {Eric Westervelt},
+author = {E. Westervelt},
 year = 2017
 }
 
 @InProceedings{Simon11,
 author = {Gy\"{o}rgy J. Simon and Vipin Kumar and Peter W. Li},
 title = {A Simple Statistical Model and Association Rule Filtering for Classification},
-booktitle = {Proceedings of the 17th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
 series={KDD '11},
 pages = {823--831},
 year = {2011}
@@ -1023,8 +1024,8 @@ pages = {587--602}
 __author = {Marina Sokolova and Mario Marchand and Nathalie Japkowicz and John Shawe-Taylor},
 author = {M. Sokolova and M. Marchand and N. Japkowicz and J. Shawe-Taylor},
 title = {The Decision List Machine},
-booktitle = {Advances in Neural Information Processing Systems},
-series = {NIPS '03},
+booktitle = {Advances in Neural Information Processing Systems {(NIPS)}},
+__series = {NIPS '03},
 pages = {921--928},
 year = {2003},
 volume = {15}
@@ -1040,7 +1041,7 @@ year = {2005}
 @InProceedings{Long07,
 author = {Philip M. Long and Rocco A. Servedio},
 title = {Attribute-efficient learning of decision lists and linear threshold functions under unconcentrated distributions},
-booktitle = {Advances in Neural Information Processing Systems},
+booktitle = {Advances in Neural Information Processing Systems {(NIPS)}},
 series={NIPS '07},
 pages = {921--928},
 year = {2007},
@@ -1079,8 +1080,8 @@ pages = {427--451}
 @Inproceedings{Vanhoof10,
 __author={Koen Vanhoof and Beno\^{i}t Depaire},
 author={K. Vanhoof and B. Depaire},
-  booktitle={Proceedings of the International Conference on Intelligent Systems and Knowledge Engineering},
-  series={ISKE~'10},
+  booktitle={International Conference on Intelligent Systems and Knowledge Engineering {(ISKE)}},
+  __series={ISKE~'10},
   title={Structure of association rule classifiers: {A} review},
   year={2010},
   pages={9--12}
@@ -1089,7 +1090,7 @@ author={K. Vanhoof and B. Depaire},
 @InProceedings{Caruana06,
 author = {Rich Caruana and Alexandru Niculescu-Mizil},
 title = {An empirical comparison of supervised learning algorithms},
-booktitle = {Proceedings of the 23rd International Conference on Machine Learning},
+booktitle = {International Conference on Machine Learning {(ICML)}},
 series={ICML '06},
 pages = {161--168},
 year = {2006}
@@ -1098,7 +1099,7 @@ year = {2006}
 @InProceedings{Beale70,
     author = {E.M.L. Beale and J.A. Tomlin},
     title = {Special facilities in a general mathematical programming system for nonconvex problems using ordered sets of variable},
-    booktitle = {Proceedings of the 5th International Conference on Operational Research},
+    booktitle = {International Conference on Operational Research},
     pages = {447--454},
     year = {1970},
     editor = {J.R. Lawrence},
@@ -1391,7 +1392,7 @@ Author = {Freitas, A. A.},
   Journal = {ACM SIGKDD Explorations Newsletter},
   Number = {1},
   Pages = {1--10},
-  Title = {Comprehensible classification models: a position paper},
+  Title = {Comprehensible classification models: {A} position paper},
   Volume = {15},
   Year = {2014}
 }
@@ -1467,7 +1468,7 @@ Year = {2016}}
 __author={William W. Cohen},
 author={W. W. Cohen},
 title={Fast Effective Rule Induction},
-booktitle={Twelfth International Conference on Machine Learning {(ICML)}}, 
+booktitle={International Conference on Machine Learning {(ICML)}}, 
 pages={115--123}, 
 year={1995}
 }
@@ -1514,8 +1515,8 @@ pages={19--28}
  __author = {Frank, Eibe and Witten, Ian H.},
  author = {Frank, E. and Witten, I. H.},
  title = {Generating Accurate Rule Sets Without Global Optimization},
- booktitle = {Proceedings of the Fifteenth International Conference on Machine Learning},
- series = {ICML '98},
+ booktitle = {International Conference on Machine Learning {(ICML)}},
+ __series = {ICML '98},
  year = {1998},
   pages = {144--151}
  } 
@@ -1534,6 +1535,6 @@ pages={261--283}
 author={R. S. Michalski},
 year={1969},
 title={On the quasi-minimal solution of the general covering problem},
-booktitle={Proceedings of the Fifth International Symposium on Information Processing},
+booktitle={International Symposium on Information Processing},
 pages={125--128}
 }
