Delete unnecessary colons before equations

--- a/paper/sections/appendix-bounds.tex
+++ b/paper/sections/appendix-bounds.tex
@@ -574,7 +574,7 @@ Next, we write ${b_0(\Prefix, \x, \y)}$ with respect to~${b_0(\Prefix', \x, \y)}
     \sum_{k=K+1}^{K'} \Cap(x_n, p_k \given \Prefix') \wedge \one [ x_n \in e_u ]\, \one [ y_n = q_u ].
 \label{eq:b0}
 \end{align}
-Rearranging~\eqref{eq:b0} gives:
+Rearranging~\eqref{eq:b0} gives
 \begin{align}
 b_0(\Prefix', \x, \y) &= b_0(\Prefix, \x, y) - \Upsilon(\Prefix', K, \x, \y).
 \label{eq:equiv-pts-b0}
