--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -99,7 +99,7 @@ Figure~\ref{fig:rule-list} shows an  optimal rule list that CORELS learns
 for the ProPublica dataset.
 %
 Figure~\ref{fig:comparison} shows that there were no statistically significant
-differences in algorithm accuracies --
+differences in algorithm accuracies ---
 the difference between folds was far larger than the difference between algorithms.
 %
 We conclude that CORELS produces models whose accuracy is comparable to those found via other algorithms.
