Add bibtex entry for Dressel & Farid paper

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1538,3 +1538,13 @@ title={On the quasi-minimal solution of the general covering problem},
 booktitle={International Symposium on Information Processing},
 pages={125--128}
 }
+
+@article {Dressel2018,
+	author = {Dressel, Julia and Farid, Hany},
+	title = {The accuracy, fairness, and limits of predicting recidivism},
+	volume = {4},
+	number = {1},
+	year = {2018},
+	publisher = {American Association for the Advancement of Science},
+	journal = {Science Advances}
+}
