Add ref for MIP paper cited by reviewer

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1540,11 +1540,23 @@ pages={125--128}
 }
 
 @article {Dressel2018,
-	author = {Dressel, Julia and Farid, Hany},
+	__author = {Dressel, Julia and Farid, Hany},
+	author = {Dressel, J. and Farid, H.},
 	title = {The accuracy, fairness, and limits of predicting recidivism},
 	volume = {4},
 	number = {1},
 	year = {2018},
 	publisher = {American Association for the Advancement of Science},
 	journal = {Science Advances}
+}
+
+@article{linderoth1999,
+  __author    = {Jeff T. Linderoth and Martin W. P. Savelsbergh},
+  author    = {J. T. Linderoth and M. W. P. Savelsbergh},
+  title     = {A Computational Study of Search Strategies for Mixed Integer Programming},
+  journal   = {{INFORMS} Journal on Computing},
+  volume    = {11},
+  number    = {2},
+  pages     = {173--187},
+  year      = {1999}
 }
