add computer lab for Nicholas

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -33,6 +33,8 @@
         Berkeley, CA 94720
         \AND
         \name Nicholas Larus-Stone \email nl363@cl.cam.ac.uk \\
+        \addr Computer Lab, University of Cambridge
+        \AND
         \name Daniel Alabi \email alabid@g.harvard.edu \\
         \name Margo Seltzer \email margo@eecs.harvard.edu \\
         \addr School of Engineering and Applied Sciences\\
