Add bibtex entry for SysML

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -4,8 +4,14 @@ title = "Learning certifiably optimal rule lists for categorical data",
 booktitle = {ACM SIGKDD International Conference on Knowledge Discovery and Data Mining {(KDD)}},
 year = {2017},
 location = {Halifax, Nova Scotia, Canada},
-__pages = {},
-year = {2017}
+}
+
+@inproceedings{Larus-Stone18-sysml,
+author = {N. Larus-Stone and E. Angelino and D. Alabi and M. Seltzer and and V. Kaxiras and A. Saligrama and C. Rudin},
+title = "Systems Optimizations for Learning Certifiably Optimal Rule Lists",
+booktitle = {{SysML} Conference},
+year = {2018},
+location = {Stanford, California}
 }
 
 @article{AngelinoLaAlSeRu17,
