Add citation for SysML paper

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -216,7 +216,9 @@ and further implementation and data processing details~\citep{AngelinoLaAlSeRu17
 Our code is at
 \end{kdd}
 \begin{arxiv}
-short version of this report~\citep{AngelinoLaAlSeRu17-kdd}. \\
+preliminary version of this report~\citep{AngelinoLaAlSeRu17-kdd}, and a report
+highlighting systems optimizations of our implementation~\citep{Larus-Stone18-sysml}; the latter includes
+additional empirical measurements not presented here. \\
 
 Our implementation of CORELS is at
 \end{arxiv}
