--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -32,10 +32,7 @@
         University of California, Berkeley,
         Berkeley, CA 94720
         \AND
-        \name Nicholas Larus-Stone \email nl363@cl.cam.ac.uk \\
-        \addr Computer Lab\\
-        University of Cambridge, Cambridge, UK
-        \AND
+        \name Nicholas Larus-Stone \email nlarusstone@alumni.harvard.edu \\
         \name Daniel Alabi \email alabid@g.harvard.edu \\
         \name Margo Seltzer \email margo@eecs.harvard.edu \\
         \addr School of Engineering and Applied Sciences\\
