Add a couple sentences on node selection, with reviewer reference

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1556,7 +1556,7 @@ pages={125--128}
 	journal = {Science Advances}
 }
 
-@article{linderoth1999,
+@article{Linderoth1999,
   __author    = {Jeff T. Linderoth and Martin W. P. Savelsbergh},
   author    = {J. T. Linderoth and M. W. P. Savelsbergh},
   title     = {A Computational Study of Search Strategies for Mixed Integer Programming},
