Fix citep not citet

--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -115,7 +115,7 @@ We note that these search policies are referred to as node selection strategies
 in the MIP literature.
 %
 Strategies such as best-first (best-bound) search and DFS are known as static methods, and the framework we present in~\S\ref{sec:scheduling}
-has the spirit of estimate-based methods~\citet{Linderoth1999}.
+has the spirit of estimate-based methods~\citep{Linderoth1999}.
 
 \subsection{Symmetry-aware Map}
 \label{sec:pmap}
