--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -588,7 +588,7 @@ For CORELS, we use regularization parameter~${\Reg=0.005}$.
 We ran a 10-fold cross validation experiment using CORELS
 and eight other algorithms:
 logistic regression, support vector machines (SVM), AdaBoost, CART, C4.5,
-random forest (RF), RIPPER, and scalable Bayesian rule lists (SBRL).\footnote{For
+random forest~(RF), RIPPER, and scalable Bayesian rule lists (SBRL).\footnote{For
 SBRL, we use the C implementation at \url{https://github.com/Hongyuy/sbrlmod}.
 By default, SBRL sets ${\eta = 3}$, ${\lambda = 9}$,
 the number of chains to 11 and iterations to 1,000.}
@@ -610,6 +610,16 @@ the difference between folds was far larger than the difference between algorith
 %
 These algorithms also all perform similarly to the black box COMPAS algorithm.
 %
+In prior work, we used CORELS to identify a short rule list depending on only three features, age, prior convictions, and sex \citep{AngelinoLaAlSeRu17-kdd}, that achieves test accuracy comparable to COMPAS.
+%
+\citet{Dressel2018} reported a similar result for another simple classifier, a logistic regression model with two features (age and prior convictions).
+%
+If we restrict CORELS to search the space of rule lists formed from these same two features (${\lambda=0.005}$), the optimal rule lists it finds achieve test accuracy that is again comparable to COMPAS.
+%
+CORELS identifies the same rule list across 10-fold cross-validation experiments.
+%
+Such a rule list is simpler to use than a linear model, which requires multiplication and addition operations to evaluate.
+
 Figure~\ref{fig:weapon-comparison} shows that for the NYCLU data set,
 logistic regression, SVM, and AdaBoost have the highest TPR's and also the highest FPR's;
 we show TPR and FPR due to class imbalance.
@@ -642,7 +652,7 @@ Note that we were unable to execute RIPPER for the NYCLU problem.
 }
 \label{fig:weapon-comparison}
 \end{figure}
-%
+
 \begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
