--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -575,10 +575,10 @@ width=0.59\textwidth]{figs/compare-compas-weapon.pdf}
 \end{center}
 \caption{Two-year recidivism prediction for the ProPublica COMPAS data set.
 %
-Comparison of CORELS and a panel of eight other algorithms:
+Comparison of CORELS and a panel of nine other algorithms:
 logistic regression~(GLM), support vector machines~(SVM),
 AdaBoost, CART, C4.5, random forests~(RF), RIPPER,
-scalable Bayesian rule lists~(SBRL).
+scalable Bayesian rule lists~(SBRL), and COMPAS.
 %
 For CORELS, we use regularization parameter~${\Reg=0.005}$.
 }
@@ -604,19 +604,37 @@ We use the same antecedent sets as input to the two rule list learning algorithm
 for the other algorithms, the inputs are binary feature sets corresponding to the
 single clause antecedents in the aforementioned antecedent sets (see Appendix~\ref{appendix:data}).
 
+\begin{figure}[t!]
+%\vspace{2mm}
+\begin{algorithmic}
+\State \bif $(priors > 3)$ \bthen $yes$
+\State \belif $(age < 25) \band (priors = 2-3)$ \bthen $yes$
+\State \belse $no$
+\end{algorithmic}
+%\vspace{1mm}
+\caption{When restricted to two features (age, priors), CORELS (${\Reg=0.005}$)
+finds the same rule list across 10 cross-validation folds.}
+\label{fig:compas-two-features}
+\end{figure}
+
 Figure~\ref{fig:compas-comparison} shows that for the ProPublica data set,
 there were no statistically significant differences in test accuracies across algorithms,
 the difference between folds was far larger than the difference between algorithms.
 %
 These algorithms also all perform similarly to the black box COMPAS algorithm.
 %
-In prior work, we used CORELS to identify a short rule list depending on only three features, age, prior convictions, and sex \citep{AngelinoLaAlSeRu17-kdd}, that achieves test accuracy comparable to COMPAS.
+In prior work, we used CORELS to identify a short rule list depending on only
+three features, age, prior convictions, and sex \citep{AngelinoLaAlSeRu17-kdd},
+that achieves test accuracy comparable to COMPAS.
 %
-\citet{Dressel2018} reported a similar result for another simple classifier, a logistic regression model with two features (age and prior convictions).
+\citet{Dressel2018} reported a similar result for another simple classifier,
+a logistic regression model with two features (age and prior convictions).
 %
-If we restrict CORELS to search the space of rule lists formed from these same two features (${\lambda=0.005}$), the optimal rule lists it finds achieve test accuracy that is again comparable to COMPAS.
+If we restrict CORELS to search the space of rule lists formed from these same
+two features (${\Reg=0.005}$), it identifies the same rule list across 10-fold
+cross-validation experiments (Figure~\ref{fig:compas-two-features}).
 %
-CORELS identifies the same rule list across 10-fold cross-validation experiments.
+This optimal rule list achieves test accuracy that is again comparable to COMPAS.
 %
 Such a rule list is simpler to use than a linear model, which requires multiplication and addition operations to evaluate.
 
